--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,10 @@
     "version": "0.1.0",
     "proxy": "http://localhost:8000",
     "dependencies": {
+        "@auth0/auth0-react": "^2.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^4.8.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "4.0.3",
         "styled-components": "^5.3.5"
