--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
         "@auth0/auth0-react": "^2.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-draggable": "^4.4.5",
         "react-icons": "^4.8.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "4.0.3",
